--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.support:wearable:1.3.0'
-    compile 'com.google.android.gms:play-services-wearable:8.3.0'
+    compile 'com.google.android.support:wearable:2.0.0-alpha1'
+    compile 'com.google.android.gms:play-services-wearable:9.0.0'
+    compile 'com.android.support:support-v4:23.4.0'
 }
